feat: add role-based access control and SMTP configuration to controllers and environment file

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,17 @@ THROTTLE_LIMIT=100
 
 # CORS
 CORS_ORIGIN=http://localhost:3000,http://localhost:4200
+
+# SMTP Configuration (for email services)
+SMTP_HOST=smtp.ethereal.email
+SMTP_PORT=587
+SMTP_USER=your_smtp_user
+SMTP_PASS=your_smtp_password
+MAIL_FROM="Student Management" <noreply@example.com>
+
+# Frontend URL (for password reset links, email verification)
+FRONTEND_URL=http://localhost:4200
+
+# File Upload Configuration
+UPLOAD_DIR=./uploads
+STORAGE_BASE_URL=http://localhost:3000/uploads
