--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/throttler": "^6.5.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/compression": "^1.8.1",
     "@types/uuid": "^8.3.4",
     "bcryptjs": "^3.0.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "compression": "^1.8.1",
     "helmet": "^8.1.0",
     "joi": "^18.0.2",
     "nodemailer": "^7.0.12",
