feat: add Redis configuration to .env.example and implement JwtStrategy unit tests

--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,7 @@ FRONTEND_URL=http://localhost:4200
 # File Upload Configuration
 UPLOAD_DIR=./uploads
 STORAGE_BASE_URL=http://localhost:3000/uploads
+# Redis Configuration (for caching)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
