--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.28",
+    "typeorm-naming-strategies": "^4.1.0",
     "uuid": "^8.3.2",
     "winston": "^3.19.0",
     "winston-daily-rotate-file": "^5.0.0"
